[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uspexkit"
version = "0.1.0"
description = "USPeX Kit — USPEX crystal structure prediction post-processing toolkit"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "FengGo"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "scikit-learn>=1.0",
    "ase>=3.22",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
uspexkit = "uspexkit.cli:main"

[project.urls]
Homepage = "https://github.com/FengGo/uspexkit"
Repository = "https://github.com/FengGo/uspexkit"

[tool.setuptools.packages.find]
include = ["uspexkit*"]

[tool.setuptools.package-data]
uspexkit = ["*.md", "*.txt"]
